
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_int32_t ;
typedef int u_char ;
typedef int ret ;


 int memset (char*,int ,int) ;
 int sprintf (char*,char*,int,int,int,int) ;

char *int_to_ip(u_int32_t ip){
 u_char *tmp=(u_char *)&ip;
 static char ret[16];
 memset(ret,0,sizeof(ret));
 sprintf(ret,"%u.%u.%u.%u",tmp[0] & 0xff,tmp[1] & 0xff,tmp[2] & 0xff,tmp[3] & 0xff);
 return ret;

}
